<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <DUT Name="JoyStickInfo" Id="{1b8bb624-a6cc-4604-8303-122550d085c3}">
    <Declaration><![CDATA[TYPE JoyStickInfo :
STRUCT
    XAxisDirection:BYTE;
	XAxisAngle:BYTE;
	YAxisDirection:BYTE;
	YAxisAngle:BYTE;
	ZAxisDirection:BYTE;
	ZAxisAngle:BYTE;
	ButtonStatus:BYTE;
	CommunictionStatus:BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>